# weedvibe

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: auth.rs  config.rs  main.rs  routes.rs
src/scripts/: advertisements.sql  advertisements.text  categories.sql  categories.text  currencies.text  discount_products.sql  discount_products.text  discounts.text  languages.sql  products.text  shop.sql  shop.text  shop_contact.sql  stocks.text  terms_conditions.sql
src/user/: controller.rs  mod.rs  models.rs
src/util/: authcontroller.rs  util.rs
