[package]
name = "weed_vibe"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6.0"
actix-files = "0.6.5"
tokio = { version = "1.37.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
dotenv = "0.15"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "chrono"] }
