[package]
name = "weed_vibe"
version = "0.1.0"
edition = "2021"

[dependencies]
magic-crypt = "3.1.13"
actix-web = "4.6.0"
actix-files = "0.6.5"
tokio = { version = "1.37.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
dotenv = "0.15"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = [
    "postgres",
    "runtime-tokio",
    "chrono",
    "uuid",
] }
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
uuid = { version = "1.8", features = ["serde", "v4"] }
thiserror = "1.0.6"
rand = "0.8.5"
env_logger = "0.11.3"
log = "0.4.21"
actix-session = "0.9.0"
